# ggml_webgpu_dev

./: CMakeLists.txt  README.md  copy.sh  demo.cpp  demo_ggml-wgpu_ref.cpp  docker-compose.yml  ggml-wgpu.cpp  ggml-wgpu.h  main.cpp
ggml-wgpu/: webgpu.hpp  wgpu-shaders.cpp  wgpu-shaders.h
